# vokter-public

./: .gitignore  README.md  REPOSITORY_SUMMARY.txt
demos/: README.md
docs/: EXECUTIVE_SUMMARY.md  KHO_RECOVERY_METHOD_SPECIFICATION.md  README-UI-CONTRACT.md  SECURITY.md  TOTP_CAPSULE_WHITEPAPER.md  VOKTER_GUARDIAN_WHITEPAPER.md  VOKTER_WALLET_WHITEPAPER.md
sdk-examples/: README.md
smart-contract/: Anchor.toml  Cargo.toml  LICENSE  VOKTER_SMARTCONTRACT_WHITEPAPER.md
smart-contract/programs/vokter-wallet/: Cargo.toml
smart-contract/programs/vokter-wallet/src/: lib.rs  lib.rs.bak  spl_vault.rs  tenant_config.rs
smart-contract/programs/vokter-wallet/tests/: v1_emergency_rotation_requires_guardian.rs
