[workspace]
members = [
    "programs/vokter-wallet"
]
resolver = "2"

[workspace.metadata.cargo-machete]
ignored = ["bytemuck"]

# [workspace.dependencies]
# zeroize = "1.8.1" # Removed to avoid conflicts

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1