[package]
  name = "vokter-wallet"
  version = "0.1.0"
  description = "Created with Anchor"
  edition = "2021"

  [lib]
  crate-type = ["cdylib", "lib"]
  name = "vokter_wallet"

  [features]
  idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
  no-entrypoint = []
  no-idl = []
  no-log-ix-name = []
  cpi = ["no-entrypoint"]
  default = []

  [dependencies]
  anchor-lang = "0.31.1"
  anchor-spl = "0.31.1"
  proc-macro2 = "1.0.95"
  bytemuck = "1.14"
  totp-rs = "5.4.0"
  sha2 = "0.10.8"
  chrono = "0.4.38"

  [dev-dependencies]
  tokio = { version = "1.0", features = ["full"] }
